// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphEngine snapshot > renders deterministically across ticks 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9997368106456,
      399.7486727714537,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9989472437366,
      399.49734664535157,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9976313027364,
      399.2460227241329,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`GraphEngine snapshot > renders deterministically across ticks 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(127.5, 127.5, 127.5, 0.5)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9997368106456,
      399.7486727714537,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(127.5, 127.5, 127.5, 0.5)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9989472437366,
      399.49734664535157,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(127.5, 127.5, 127.5, 0.5)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9976313027364,
      399.2460227241329,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;
